--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-blue-500 text-white p-4 shadow-lg fixed w-full">
-    <div class="container mx-auto flex justify-between items-center">
+    <div class="mx-auto w-full flex justify-between items-center">
       <a routerLink="/" class="text-xl font-bold cursor-pointer">Swift Hire ツ</a>
       <ul class="flex space-x-6">
         <li><a routerLink="/dashboard" routerLinkActive="active"  class="hover:text-gray-300 cursor-pointer">Dashboard</a></li>
