--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -1,1 +1,10 @@
-<p>jobs works!</p>
+<div class="flex-auto">
+    <div class="flex justify-between m-4">
+        <div class="font-bold text-2xl">Jobs</div>
+        <div class="rounded-sm bg-blue-600 p-2 text-white cursor-pointer hover:bg-blue-500 active:bg-blue-800">Create</div>
+    </div>
+    <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md" *ngFor="let item of list">
+        <div class="text-xl font-bold">{{item.title}}</div>
+        <div>{{item.description}}</div>
+</div>
+</div>
