--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -47,7 +47,7 @@
   <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"
     *ngFor="let item of jobs">
     <div class="flex justify-between items-center">
-      <div class="text-xl font-bold-">{{ item.title }}</div>
+      <div class="text-xl font-bold">{{ item.title }}</div>
       <div class="mr-5 font-semibold ">No of Candidates:{{item.candidatesCount}}</div>
     </div>
     <div class="flex items-center">
