--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<h1 class="text-3xl text-blue-400 font-bold underline">
-    Dashboard works
+<h1 class="text-3xl text-blue-400 font-bold">
+    Dashboard 
   </h1>
+  <app-line-component></app-line-component>
