--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -9,46 +9,43 @@
 
   <!-- open the form-->
   <div *ngIf="isCreating" class="fixed inset-0 flex items-center justify-center backdrop-blur-md">
-    <div class="bg-white p-8 rounded-md shadow-lg w-1/3">
-      <h2 class="text-2xl font-bold mb-4">Create New Job</h2>
-      <div class="flex justify-between gap-4">
-        <div>
-          <label for="jobTitle" class="block mb-1">
-            Job Title <span class="text-red-500">*</span>
-          </label>
-          <input [(ngModel)]="jobTitle" id="jobTitle" class="rounded-sm border p-2 w-full mb-4" type="text" />
-        </div>
-
-        <div>
-          <label for="jobLocation" class="block mb-1"> Job Location </label>
-          <input [(ngModel)]="jobLocation" id="jobLocation" class="rounded-sm border p-2 w-80 mb-4" type="text" />
-        </div>
-      </div>
+    <div class="bg-white p-8 rounded-md shadow-lg w-1/3 h-[600px] flex flex-col justify-between overflow-y-scroll">
       <div>
-        <label for="jobDescription" class="block mb-1">
-          Job Description <span class="text-red-500">*</span>
-        </label>
-        <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
-        <ngx-editor [editor]="editor" [(ngModel)]="jobDescription" [disabled]="false" [placeholder]="'Type here...'"
-          [style]="style"></ngx-editor>
+        <h2 class="text-2xl font-bold mb-4">Create New Job</h2>
+    
+        <div class="flex justify-between gap-4">
+          <div>
+            <label for="jobTitle" class="block mb-1">Job Title <span class="text-red-500">*</span></label>
+            <input [(ngModel)]="jobTitle" id="jobTitle" class="rounded-sm border p-2 w-full mb-4" type="text" />
+          </div>
+    
+          <div>
+            <label for="jobLocation" class="block mb-1">Job Location</label>
+            <input [(ngModel)]="jobLocation" id="jobLocation" class="rounded-sm border p-2 w-80 mb-4" type="text" />
+          </div>
+        </div>
+    
+        <div>
+          <label for="jobDescription" class="block mb-1">Job Description <span class="text-red-500">*</span></label>
+          <ngx-editor-menu [editor]="editor"></ngx-editor-menu>
+          <ngx-editor [editor]="editor" [(ngModel)]="jobDescription" [disabled]="false" [placeholder]="'Type here...'"
+            [style]="style"></ngx-editor>
+        </div>
       </div>
-
-      <div class="flex justify-end space-x-2">
-        <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400" (click)="isCreating = false">
-          Cancel
-        </button>
-        <button class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-500" (click)="saveJob()">
-          Save
-        </button>
+    
+      <!-- Footer Buttons at the bottom -->
+      <div class="flex justify-end space-x-2 pt-4">
+        <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400" (click)="isCreating = false">Cancel</button>
+        <button class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-500" (click)="saveJob()">Save</button>
       </div>
     </div>
   </div>
 
-  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"
+  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"(click)="openJob()"
     *ngFor="let item of jobs">
     <div class="flex justify-between items-center">
       <div class="text-xl font-bold">{{ item.title }}</div>
-      <div class="mr-5 font-semibold ">No of Candidates:{{item.candidatesCount}}</div>
+      <div class="mr-5 font-semibold ">No of Candidates: {{item.candidatesCount}}</div>
     </div>
     <div class="flex items-center">
       <div class="mr-1">{{ item.location }}</div>
