add dynamic route for job details page

--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"(click)="openJob()"
+  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"(click)="openJob(item.id)"
     *ngFor="let item of jobs">
     <div class="flex justify-between items-center">
       <div class="text-xl font-bold">{{ item.title }}</div>
