--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -8,8 +8,8 @@
   </div>
 
   <!-- open the form-->
-  <div *ngIf="isCreating" class="fixed inset-0 flex items-center justify-center backdrop-blur-md">
-    <div class="bg-white p-8 rounded-md shadow-lg w-1/3 h-[600px] flex flex-col justify-between overflow-y-scroll">
+  <div *ngIf="isCreating" class=" fixed inset-0 flex items-center justify-center backdrop-blur-md ">
+    <div class="no-scrollbar bg-white p-8 rounded-md shadow-lg w-1/3 h-[600px] flex flex-col justify-between overflow-y-scroll">
       <div>
         <h2 class="text-2xl font-bold mb-4">Create New Job</h2>
     
