--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -9,7 +9,7 @@
 
   <!-- open the form-->
   <div *ngIf="isCreating" class=" fixed inset-0 flex items-center justify-center backdrop-blur-md ">
-    <div class="no-scrollbar bg-white p-8 rounded-md shadow-lg w-1/3 h-[600px] flex flex-col justify-between overflow-y-scroll">
+    <div class="no-scrollbar bg-white p-8 rounded-md shadow-lg w-2/3 h-2/3 flex flex-col justify-between overflow-y-scroll">
       <div>
         <h2 class="text-2xl font-bold mb-4">Create New Job</h2>
     
@@ -24,7 +24,19 @@
             <input [(ngModel)]="jobLocation" id="jobLocation" class="rounded-sm border p-2 w-80 mb-4" type="text" />
           </div>
         </div>
-    
+        <div>Work Mode</div>
+        <div class="flex ">
+          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "inPerson" name="workmode" value="In-Person"><label for="inPerson">In-Person</label></div>
+          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "remote" name="workmode" value="Remote"><label for="remote">Remote</label></div>
+          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "hybrid" name="workmode" value="Hybrid"><label for="hybrid">Hybrid</label></div>
+        </div>
+        <div>Work Type</div>
+        <select name="worktype" id="worktype">
+          <option value="fulltime">Full time</option>
+          <option value="parttime">Part time</option>
+          <option value="contract">Contract</option>
+        </select>
+        
         <div>
           <label for="jobDescription" class="block mb-1">Job Description <span class="text-red-500">*</span></label>
           <ngx-editor-menu [editor]="editor"></ngx-editor-menu>
