--- a/src/app/jobs/jobs.component.html
+++ b/src/app/jobs/jobs.component.html
@@ -9,52 +9,106 @@
 
   <!-- open the form-->
   <div *ngIf="isCreating" class=" fixed inset-0 flex items-center justify-center backdrop-blur-md ">
-    <div class="no-scrollbar bg-white p-8 rounded-md shadow-lg w-2/3 h-2/3 flex flex-col justify-between overflow-y-scroll">
+    <div
+      class="no-scrollbar bg-white p-8 rounded-md shadow-lg w-2/3 h-2/3 flex flex-col justify-between overflow-y-scroll">
       <div>
         <h2 class="text-2xl font-bold mb-4">Create New Job</h2>
-    
+
         <div class="flex justify-between gap-4">
-          <div>
-            <label for="jobTitle" class="block mb-1">Job Title <span class="text-red-500">*</span></label>
-            <input [(ngModel)]="jobTitle" id="jobTitle" class="rounded-sm border p-2 w-full mb-4" type="text" />
+          <div class="flex gap-1">
+            <input [(ngModel)]="jobTitle" id="jobTitle"
+              class="rounded-sm border-0 p-2 w-full mb-4 hover:border-none focus:border-0 outline-0 bg-amber-0 "
+              type="text" placeholder="Job Title" />
+            <span class="text-red-500">*</span>
           </div>
-    
-          <div>
-            <label for="jobLocation" class="block mb-1">Job Location</label>
-            <input [(ngModel)]="jobLocation" id="jobLocation" class="rounded-sm border p-2 w-80 mb-4" type="text" />
+
+          <div class="flex">
+            <input [(ngModel)]="jobLocation" id="jobLocation"
+              class="rounded-sm border-0 p-2 w-full mb-4 hover:border-none focus:border-0 outline-0 bg-amber-0"
+              type="text" placeholder="Job Location" />
+            <span class="text-red-500">*</span>
           </div>
         </div>
-        <div>Work Mode</div>
-        <div class="flex ">
-          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "inPerson" name="workmode" value="In-Person"><label for="inPerson">In-Person</label></div>
-          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "remote" name="workmode" value="Remote"><label for="remote">Remote</label></div>
-          <div class="flex p-1"><input class="mt-0.5 mr-1" type = "radio" id = "hybrid" name="workmode" value="Hybrid"><label for="hybrid">Hybrid</label></div>
+        <div class="flex justify-between ">
+          <div>
+            <div class="font-semibold">Work Mode</div>
+            <div class="flex ">
+              <div class="flex p-1"><input class="mt-0.5 mr-1" type="radio" id="inPerson" name="workmode"
+                  value="In-Person"><label for="inPerson">In-Person</label></div>
+              <div class="flex p-1"><input class="mt-0.5 mr-1" type="radio" id="remote" name="workmode"
+                  value="Remote"><label for="remote">Remote</label></div>
+              <div class="flex p-1"><input class="mt-0.5 mr-1" type="radio" id="hybrid" name="workmode"
+                  value="Hybrid"><label for="hybrid">Hybrid</label></div>
+            </div>
+          </div>
+          <div>
+            <div class="font-semibold">Work Type</div>
+            <div class="flex p-1 ">
+              <select name="worktype" id="worktype">
+                <option value="fulltime">Full time</option>
+                <option value="parttime">Part time</option>
+                <option value="contract">Contract</option>
+                <option value="contractfultime">Contract Full Time</option>
+                <option value="contractparttime">Contract Part Time</option>
+                <option value="coop">Co-op</option>
+                <option value="cashual">Casual / On-Call</option>
+                <option value="freelance">Freelance</option>
+                <option value="apprenticeship">Apprenticeship</option>
+                <option value="seasonal">Seasonal</option>
+              </select>
+            </div>
+          </div>
         </div>
-        <div>Work Type</div>
-        <select name="worktype" id="worktype">
-          <option value="fulltime">Full time</option>
-          <option value="parttime">Part time</option>
-          <option value="contract">Contract</option>
-        </select>
-        
         <div>
-          <label for="jobDescription" class="block mb-1">Job Description <span class="text-red-500">*</span></label>
+          <div class="font-semibold mb-2">Salary</div>
+          
+          
+          <div class="flex flex-col sm:flex-row gap-2 mb-4">
+            <label class="flex items-center">
+              <input type="radio" id="Hourly" name="salaryType" value="Hourly"
+                     [(ngModel)]="salaryType" class="mr-2 mt-0.5">
+              Hourly
+            </label>
+            <label class="flex items-center">
+              <input type="radio" id="Annually" name="salaryType" value="Annually"
+                     [(ngModel)]="salaryType" class="mr-2 mt-0.5">
+              Annually
+            </label>
+          </div>
+        
+          
+          <div>
+            <input *ngIf="salaryType === 'Hourly'" class="rounded-sm border p-2 mb-4 "
+                   type="text" placeholder="Hourly Rate $" />
+        
+            <div *ngIf="salaryType === 'Annually'" class="flex flex-row gap-2 items-center mb-4">
+              <input class="rounded-sm border p-2 " type="text" placeholder="Min $" /> -
+              <input class="rounded-sm border p-2 " type="text" placeholder="Max $" />
+            </div>
+          </div>
+        </div>
+        
+
+        <div>
+          <label for="jobDescription" class="block mb-1 font-semibold">Job Description <span class="text-red-500">*</span></label>
           <ngx-editor-menu [editor]="editor"></ngx-editor-menu>
           <ngx-editor [editor]="editor" [(ngModel)]="jobDescription" [disabled]="false" [placeholder]="'Type here...'"
             [style]="style"></ngx-editor>
         </div>
       </div>
-    
+
       <!-- Footer Buttons at the bottom -->
       <div class="flex justify-end space-x-2 pt-4">
-        <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400" (click)="isCreating = false">Cancel</button>
-        <button class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-500" (click)="saveJob()">Save</button>
+        <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-200 cursor-pointer active:bg-gray-500"
+          (click)="isCreating = false;salaryType = ''">Cancel</button>
+        <button class="px-4 py-2 bg-blue-600 text-white rounded cursor-pointer hover:bg-blue-500 active:bg-blue-800"
+          (click)="saveJob(); salaryType = ''">Save</button>
       </div>
     </div>
   </div>
 
-  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"(click)="openJob(item.id)"
-    *ngFor="let item of jobs">
+  <div class="p-2 bg-gray-100 border-2 border-gray-200 m-2 rounded-md hover:bg-gray-300 cursor-pointer"
+    (click)="openJob(item.id)" *ngFor="let item of jobs">
     <div class="flex justify-between items-center">
       <div class="text-xl font-bold">{{ item.title }}</div>
       <div class="mr-5 font-semibold ">No of Candidates: {{item.candidatesCount}}</div>
@@ -70,7 +124,7 @@
         hybrid
       </div>
     </div>
-    
+
   </div>
 
 </div>
